# QuickApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appcontroller.cpp  appcontroller.h  authservice.cpp  authservice.h  main.cpp  todo.md
qml/: LoginDialog.qml  Main.qml  MainWindow.qml
